Add and update flags for embedded tomcat (#209)
- Include required reflection parameters for embedded StartTomcat tasks
- Build embedded distribution archives regardless of `useEmbeddedTomcat` flag
- Add flags to override distributions' specified archive type (`forceStandaloneDist` & `forceEmbeddedDist`)